--- a/SettlersOfSomoria/Saved/Config/WindowsEditor/Engine.ini
+++ b/SettlersOfSomoria/Saved/Config/WindowsEditor/Engine.ini
@@ -42,14 +42,9 @@ Paths=../../../Engine/Plugins/Experimental/PythonScriptPlugin/Content
 Paths=../../../Engine/Plugins/Experimental/UVEditor/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+Paths=../../../Engine/Plugins/Marketplace/DirGravity/Content
+Paths=../../../Engine/Plugins/Marketplace/FlatNodes/Content
+Paths=../../../Engine/Plugins/Runtime/SunPosition/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -71,4 +66,8 @@ TunnelMulticastEndpoint=
 SDKPath=(Path="")
 NDKPath=(Path="")
 JavaPath=(Path="")
+
+[/Script/UnrealEd.UnrealEdEngine]
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
 
