--- a/SettlersOfSomoria/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SettlersOfSomoria/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ PlayerStart="\"Object\" "
 NavigationObjectBase="\"Object\" "
 GravityMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
-Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
+Info="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -791,6 +791,9 @@ VoxelWorldEditorControls.Input=True
 VoxelWorldEditorControls.Actor=True
 WorldDataLayers.Networking=True
 WorldSettings.HLODSystem=True
+WorldSettings.AI=True
+WorldSettings.WorldPartition=True
+WorldSettings.Cooking=True
 
 [PluginBrowser]
 InstalledPlugins=FlatNodes
@@ -1981,8 +1984,8 @@ MRUItem2=/DirGravity/Levels/PlanetsExample
 MRUItem3=/DirGravity/Levels/SimpleGravityExample
 
 [DetailCustomWidgetExpansion]
-WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_GravityCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -2023,4 +2026,7 @@ PaintMaterial=()
 
 [VoxelTool.VoxelSphereTool]
 SharedConfig=SharedConfig
+
+[MessageLog]
+LastLogListing=PIE
 
